--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
             <div class="about-content">
                 <h2 class="section-title">About TransitFlow</h2>
                 <p>TransitFlow is a comprehensive transportation platform founded in 2020 with a mission to
-                    revolutionize urban mobility. We believe in creating seamless, efficient, and sustainable
+                    revolutionize city mobility. We believe in creating seamless, efficient, and sustainable
                     transportation solutions for modern cities.</p>
                 <p>Our platform integrates multiple transportation modes into a single, user-friendly interface, making
                     it easier than ever to move people and goods across the city.</p>
-                <p>With a focus on innovation and sustainability, we're committed to reducing traffic congestion,
-                    lowering carbon emissions, and improving the quality of urban life.</p>
+                <p>With a focus on innovation and sustainability, we're committed to reducing traffic jam,
+                    lowering carbon emissions, and improving the quality of city life.</p>
                 <a href="/stransportation/pages/contact.html" class="btn btn-primary" style="margin-top: 1.5rem;">Get In Touch</a>
             </div>
             <div class="about-image">
