--- a/index.html
+++ b/index.html
@@ -20,14 +20,9 @@
                 </div>
                 <div class="logo-text">Transit<span>Flow</span></div>
             </a>
-
-            <!-- Mobile Menu Toggle
-            <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox">
-            <!-- Mobile Menu Toggle -->
-            <!-- <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox"> -->
             <label for="mobile-toggle" class="mobile-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
-            </label> -->
+            </label>
 
             <!-- Navigation Menu -->
             <ul class="nav-menu">
