--- a/stransportation/pages/about.html
+++ b/stransportation/pages/about.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
-=======
     <title>Transportation</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
      <link rel="stylesheet" href="/stransportation/css/about.css">
      <link rel="stylesheet" href="/stransportation/css/style.css">
->>>>>>> b0804437083f4b975f29ba8c7173a42a538ff44c
 </head>
 <body>
     <!-- ===== NAVBAR ===== -->
@@ -27,15 +24,9 @@
                 <div class="logo-text">Transit<span>Flow</span></div>
             </a>
 
-            <!-- Mobile Menu Toggle -->
-<<<<<<< HEAD
-            <!-- <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox">
-=======
-            <!-- <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox"> -->
->>>>>>> b0804437083f4b975f29ba8c7173a42a538ff44c
             <label for="mobile-toggle" class="mobile-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
-            </label> -->
+            </label>
 
             <!-- Navigation Menu -->
             <ul class="nav-menu">
