--- a/stransportation/pages/service.html
+++ b/stransportation/pages/service.html
@@ -22,9 +22,6 @@
                 </div>
                 <div class="logo-text">Transit<span>Flow</span></div>
             </a>
-
-            <!-- Mobile Menu Toggle -->
-            <!-- <input type="checkbox" id="mobile-toggle" class="mobile-toggle-checkbox"> -->
             <label for="mobile-toggle" class="mobile-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
             </label>
@@ -41,11 +38,8 @@
                     <a href="/stransportation/pages/service.html" class="nav-link active">Services</a>
                 </li>
                 <li class="nav-item">
-<<<<<<< HEAD
-                    <a href="./about.html" class="nav-link active">About</a>
-=======
-                    <a href="/stransportation/pages/about.html" class="nav-link">About</a>
->>>>>>> 988ca61051da1ae70b95658057b03fce3e16ff19
+                    <!-- <a href="./about.html" class="nav-link active">About</a> -->
+                    <a href="/stransportation/css/about.css" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
