--- a/stransportation/pages/about.html
+++ b/stransportation/pages/about.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../css/about.css">
     <title>Transportation</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-     <link rel="stylesheet" href="/stransportation/css/about.css">
-     <link rel="stylesheet" href="/stransportation/css/style.css">
+     <!-- <link rel="stylesheet" href="/stransportation/css/about.css"> -->
+     <!-- <link rel="stylesheet" href="/stransportation/css/style.css"> -->
 </head>
 <body>
     <!-- ===== NAVBAR ===== -->
