--- a/stransportation/pages/service.html
+++ b/stransportation/pages/service.html
@@ -38,8 +38,8 @@
                     <a href="/stransportation/pages/service.html" class="nav-link active">Services</a>
                 </li>
                 <li class="nav-item">
-                    <!-- <a href="./about.html" class="nav-link active">About</a> -->
-                    <a href="/stransportation/css/about.css" class="nav-link">About</a>
+                    <a href="./about.html" class="nav-link">About</a>
+                    <!-- <a href="/stransportation/css/about.css" class="nav-link">About</a> -->
                 </li>
                 <li class="nav-item">
                     <a href="/stransportation/pages/contact.html" class="nav-link">Contact</a>
